# XTouchDownRecorder

./: .gitignore  2018-03-09065154.csv  CMakeLists.txt  LICENSE  README.md  XTD-2018-03-13220801.csv  copy.cmd  news.txt  news9.txt  skunkcrafts_updater.cfg.template  skunkcrafts_updater_beta.cfg.template  version.mak
.github/: FUNDING.yml
.github/workflows/: release.yml
core/: CMakeLists.txt  cef3.cpp  cef3.h  cef3_ui.cpp  lightworker.c  lightworker.cpp  lightworker.h  xtouchdownrecorder.c  xtouchdownrecorder.cpp
curl-7.58.0/: Makefile
release/: LICENSE  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
release/64/: mac.xpl  win.xpl
source/: README.txt
source/64/: mac.xpl  win.xpl
